--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+[![No Maintenance Intended](http://unmaintained.tech/badge.svg)](http://unmaintained.tech/)
+
 This is a crawler for ftp servers beeing able to crawl hundreds of servers
 in paralell.
 
